--- a/blog.html
+++ b/blog.html
@@ -16,21 +16,12 @@
 </header>
 
 <body>
-
-<section class="entries">
-<p id="name"> </p>
-<p id="title"></p>
-<p id="content"></p>
-</section>
+<section id="blog-container"> 
+<!--Blog entries will be displayed on page via js function and local storage-->
+</section> 
 
 
-
-
-
-
-</div>
-
- <!-- dark/light mode switch-->
+<!-- dark/light mode switch-->
  <div class="row toggle">
   <div class="col">
     <p><strong>DARK MODE</strong></p>
@@ -42,9 +33,15 @@
   <div class="col">
     <p><strong>LIGHT MODE</strong></p>
   </div>
+</div>
 
+
+ 
   <script src="./assets/js/blog.js"></script> 
 
+  <footer class="footer">
+  <a id="link" href="https://kwansom.github.io/kun-portfolio/">Developer's Portfolio</a>
+  </footer>  
 
 </body>
 </html>
