--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/form.css">
-    <title>Life</title>
+    <title>Life Lately</title>
 </head>
 
 <header> </header>
@@ -25,10 +25,10 @@
     <label for="Name">Username:</label><br>
     <input type="text" id="name" name="name"><br>
 
-    <label for="Blog Title">Blog Title</label><br>
+    <label for="Blog Title">Blog Title:</label><br>
     <input type="text" id="title" name="title"><br>
 
-    <label for="Blog Content">Blog Content</label><br>
+    <label for="Blog Content">Blog Content:</label><br>
     <input type="text" id="content" name="content"><br>
 
 <!---submitBlogPost() function in form.js // connect to button/user interact-->
